@@ -9,7 +9,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: unixSelect.test,v 1.6 2002/09/30 15:22:08 dkf Exp $
+# RCS: @(#) $Id: unixSelect.test,v 1.7 2002/10/01 08:48:09 dkf Exp $
 
 package require tcltest 2.1
 namespace import -force tcltest::configure
@@ -324,7 +324,9 @@ test unixSelect-1.18 {TkSelGetSelection procedure: INCR i18n text, utf-8} {unixO
     setupbg
     dobg {
 	text .t; pack .t; update
-	.t insert 1.0 [string repeat [string repeat \u00c4\u00e4 50]\n 21] sel
+	.t insert 1.0 [string repeat [string repeat \u00c4\u00e4 50]\n 21]
+	# Has to be selected in a separate stage
+	.t tag add sel 1.0 21.end+1c
     }
     after 10
     set x [selection get -type UTF8_STRING]
@@ -336,7 +338,9 @@ test unixSelect-1.19 {TkSelGetSelection procedure: INCR i18n text, utf-8} {unixO
     setupbg
     dobg {
 	text .t; pack .t; update
-	.t insert 1.0 i[string repeat [string repeat \u00c4\u00e4 50]\n 21] sel
+	.t insert 1.0 i[string repeat [string repeat \u00c4\u00e4 50]\n 21]
+	# Has to be selected in a separate stage
+	.t tag add sel 1.0 21.end+1c
     }
     after 10
     set x [selection get -type UTF8_STRING]
